refactor : 메서드 수정 및 테스트코드 추가
unmodifiableList를 copyOf로 변경
isBust에 대한 테스트코드 추가